fix z-index

--- a/app/assets/stylesheets/shared/header.scss
+++ b/app/assets/stylesheets/shared/header.scss
@@ -8,7 +8,7 @@
   left: 0;
   box-sizing: border-box;
   background-color: #fff;
-  z-index: 1011;
+  z-index: 1012;
   display: flex;
   justify-content: space-between;
   align-items: center;
